--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/DecorationAppTheme">
         <meta-data
             android:name="com.thinkland.juheapi.openid"
             android:value="JH70701c461161ff1f30fee61dbb49340c"/>
 
-        <activity android:name=".view.activity.CategoryActivity">
+        <activity android:name=".view.activity.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.MainActivity"/>
+        <activity
+            android:name=".view.activity.GuideActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".view.activity.CategoryActivity"/>
         <activity android:name=".view.activity.SubcategoryActivity"/>
         <activity android:name=".view.activity.SearchResultActivity"/>
     </application>
