--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
             android:name="com.thinkland.juheapi.openid"
             android:value="JH70701c461161ff1f30fee61dbb49340c"/>
 
-        <activity android:name=".view.activity.LoadingActivity">
+        <activity
+            android:name=".view.activity.LoadingActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -31,16 +34,36 @@
 
         <activity
             android:name=".view.activity.GuideActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
         </activity>
 
-        <activity android:name=".view.activity.CategoryActivity"/>
-        <activity android:name=".view.activity.SearchActivity"/>
-        <activity android:name=".view.activity.CookDetailActivity"/>
-        <activity android:name=".view.activity.StepShowActivity"/>
+        <activity
+            android:name=".view.activity.CategoryActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".view.activity.SearchActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysVisible|adjustResize"/>
+        <activity
+            android:name=".view.activity.CookDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".view.activity.StepShowActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
 
-        <activity android:name=".view.activity.SubcategoryActivity"/>
-        <activity android:name=".view.activity.SearchResultActivity"/>
+        <activity
+            android:name=".view.activity.SubcategoryActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            />
+        <activity
+            android:name=".view.activity.SearchResultActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
